--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5; url=TWÓJ_ADRES_STRONY">
+    <meta http-equiv="refresh" content="5; url=https://tfos-pl.github.io/TF10/TFOS.html">
     <title>Przekierowanie</title>
     <style>
         body {
@@ -60,7 +60,7 @@
     <div class="container">
         <h1>Przekierowanie do TF/Bambus OS</h1>
         <p>Za chwilę zostaniesz przeniesiony na stronę systemu TF/Bambus OS.</p>
-        <p class="redirect">Jeśli przekierowanie się nie rozpocznie, kliknij <a href="TWÓJ_ADRES_STRONY" style="color: #00e6e6; text-decoration: none;">tutaj</a>.</p>
+        <p class="redirect">Jeśli przekierowanie się nie rozpocznie, kliknij <a href="https://tfos-pl.github.io/TF10/TFOS.html" style="color: #00e6e6; text-decoration: none;">tutaj</a>.</p>
     </div>
 </body>
 </html>
